--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: sqlite3
+  - name: postgres
     ipAllowList: []
 
 services:
@@ -13,7 +13,7 @@ services:
         sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: sqlite3
+          name: postgres
           property: connectionString
   - type: redis
     name: redis
